# app/Http/Controllers/Controller.php
@@ -12,6 +12,13 @@ use Illuminate\Routing\Controller as BaseController;
  *     version="1.0.0",
  *     title="API Docs"
  * )
+ *
+ * @OA\SecurityScheme(
+ *    securityScheme="sanctum",
+ *    type="http",
+ *    scheme="bearer",
+ *    name="Authorization Control",
+ * )
  */
 class Controller extends BaseController
 {
