# app/Http/Middleware/Authenticate.php
@@ -12,6 +12,7 @@ class Authenticate extends Middleware
      */
     protected function redirectTo(Request $request): ?string
     {
-        return $request->expectsJson() ? null : route('login');
+        // different redirect for web and api
+        return $request->is('api/*') ? route('unauthenticated') : route('login');
     }
 }
